--- a/react-resume/src/index.css
+++ b/react-resume/src/index.css
@@ -7,6 +7,11 @@
   color: #ddd;
   
 }
+@media (max-width: 800px){
+  .navbar{
+    flex-direction: column;
+  }
+}
 p{
   color: blue;
   font-weight: bold;
@@ -56,6 +61,7 @@ p{
   text-align: left;
   padding-top: 20px;
   padding-bottom: 10px;
+  color: #D43f3f;
 }
 .home-bio li{
   text-align: left;
@@ -64,6 +70,15 @@ p{
 .home-bio a {
   text-decoration: none;
   color: #5db5fe;
+}
+.home-bio table{
+  table-layout: flex;
+  width: 750px;
+}
+.home-bio th,td{
+  padding-bottom: 20px;
+  padding-left: 20px;
+  text-align: left;
 }
 
 /*blog preview*/
