--- a/react-resume/src/index.css
+++ b/react-resume/src/index.css
@@ -7,7 +7,7 @@
   color: #ddd;
   
 }
-@media (max-width: 800px){
+@media screen and (max-width: 800px){
   .navbar{
     flex-direction: column;
   }
