--- a/react-resume/src/index.css
+++ b/react-resume/src/index.css
@@ -11,6 +11,10 @@
   .navbar{
     flex-direction: column;
   }
+  .navbar h1,p{
+    padding: 5px;
+    text-align: center;
+  }
 }
 p{
   color: blue;
